# LabelLib

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  .zenodo.json  CMakeLists.txt  Doxyfile  MANIFEST.in  README.md  build-wheels.sh  build_linux.sh  build_win.sh  cibuildwheel.toml  environment.yaml  make_osx.sh  pypi-upload.sh  pypi_upload.sh  pyproject.toml  setup.py
.github/workflows/: build.yml  monthly-schedule.yml
FlexLabel/: CMakeLists.txt
FlexLabel/cmake/: CPackConfig.cmake  FlexLabelConfig.cmake
FlexLabel/include/: CMakeLists.txt
FlexLabel/include/FlexLabel/: FlexLabel.h  Version.h.in
FlexLabel/python/: CMakeLists.txt  LabelLib_pymol.py  bindings.cpp  mdtraj_example.py  pymol_extension.py  usage.py
FlexLabel/src/: CMakeLists.txt  FlexLabel.cxx  main.cxx
FlexLabel/test/: CMakeLists.txt  test.pqr  testFlexLabel.cxx  testFlexLabel_arr.cxx
cmake/: Common.cmake  DoxygenTarget.cmake  GitDateVersion.cmake  PackageConfigurator.cmake
docs/: index.html
labellib/: __init__.py
recipe/: conda_build_config.yaml  meta.yaml
test/: test_array_api.py  test_basic.py
