[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cmake>=3.1",
    "numpy",
    "pybind11>=2.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "labellib"
version = "1.0.0"
description = "Python bindings for LabelLib - Library for coarse-grained simulations of probes flexibly coupled to biomolecules"
readme = "README.md"
license = "MPL-2.0"
authors = [
    {name = "Mykola Dimura", email = "mykola.dimura@gmail.com"},
    {name = "Thomas-Otavio Peulen", email = "thomas.otavio.peulen@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/Fluorescence-Tools/LabelLib"}

[tool.setuptools]
packages = ["labellib"]

[tool.setuptools.dynamic]
version = {attr = "labellib.__version__"}

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]